--- a/my1.html
+++ b/my1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> animal book </title>
+	<title> animals contain </title>
 	<link rel="stylesheet" type="text/css" href="1.css">
 </head>
 <body>
