see the cj=hanges

--- a/my1.html
+++ b/my1.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="1.css">
 </head>
 <body>
-<h1>the life in wild</h1>
+<h1>the life in between wild animal</h1>
 <p>animal is a gift which god provide us </p>
 <div class="container">
 <img src="http://www.hickerphoto.com/images/1024/endangered-animal-list_5406.jpg">
