--- a/my1.html
+++ b/my1.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>the life in between wild animal</h1>
-<p>animals is a gift which god provide us can youn beleve this </p>
+<p>animals is a gift which god provide us can you beleve this </p>
 <div class="container">
 <img src="http://www.hickerphoto.com/images/1024/endangered-animal-list_5406.jpg">
 <img src="http://1.bp.blogspot.com/-gTLOmkIa51I/T9AllaNBmyI/AAAAAAAI8N8/wNh5PWZvaiA/s1600/pictures+of+endangered+animals+%2817%29.jpg">
